# battery-rul-prediction

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: README.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling_results.ipynb
reports/: interview_notes.md  results.md
scripts/: run_pipeline.py
src/: config.py
src/data/: dataset.py  download.py  load.py  preprocess.py
src/features/: build_features.py
src/models/: evaluate.py  metrics.py  models.py  train.py
src/visualization/: plots.py
tests/: test_config.py  test_data.py  test_features.py  test_metrics.py
