[project]
name = "battery-rul-prediction"
version = "0.1.0"
description = "Predict lithium-ion cell cycle life from the first ~100 cycles (Severson 2019 benchmark)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amirreza Roodsaz" }]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear, SIM = simplify
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
